git-svn-id: https://repo.dev.bbc.co.uk/playground/kennyr04/timelines_deck@937365 6500d436-0a25-4ea1-a8e6-63f9231d3e1c

--- a/themes/style/timeline.css
+++ b/themes/style/timeline.css
@@ -43,9 +43,14 @@
 	top:20px;    
 }
 .timeline iframe{
-	width:800px;
+	width:1000px;
 	height:600px;    
 }
+
+.timeline .narrower iframe{
+	width:800px;    
+}
+
 .timeline .fancy-transform {
 	display:block;
 	position:relative;
