--- a/themes/style/timeline.css
+++ b/themes/style/timeline.css
@@ -1,3 +1,10 @@
+.timeline h1,
+.timeline h2,
+.timeline p,
+.timeline li{
+font-family: 'Source Sans Pro', sans-serif !important;
+}
+
 .timeline h1{
 	top: auto !important;
 	bottom: -20px !important; 
