--- a/themes/style/timeline.css
+++ b/themes/style/timeline.css
@@ -9,10 +9,26 @@ font-family: 'Source Sans Pro', sans-serif !important;
 	top: auto !important;
 	bottom: -20px !important; 
 	z-index: 9999;
+	font-size: 2.5em;
+}
+.timeline h2{
+	font-size: 1.5em;
+	text-align:center;
+}
+.cssreflections .timeline .slide h1{
+	-webkit-box-reflect: below -0.556em -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(0.3, transparent), color-stop(0.7, rgba(255, 255, 255, 0.1)), to(transparent)) !important;
+}
+
+.cssreflections .timeline .slide h2{
+	text-align:center;
+	-webkit-box-reflect: below -0.256em -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(0.3, transparent), color-stop(0.7, rgba(255, 255, 255, 0.1)), to(transparent)) !important;
 }
 .timeline .insterstitial{
   background-color:lightblue;  
   font-size:2em  
+}
+.cssreflections .timeline .insterstitial h1{
+    -webkit-box-reflect: none !important;
 }
 
 .timeline ul{
@@ -20,9 +36,6 @@ font-family: 'Source Sans Pro', sans-serif !important;
 	top:100px;
 	left:20%;
 	width:80%;
-}
-.timeline .slide h1 {
-	font-size: 2.5em;
 }
 .timeline #flashtimeline {
 	position:relative;
@@ -40,9 +53,15 @@ font-family: 'Source Sans Pro', sans-serif !important;
 	width: 50%;
 	margin: 0px auto;
 }
+.timeline .quicknote{
+	text-align:center;
+}
 .timeline iframe,
 .timeline .image-cradle img {
 	border: solid 5px lightblue;
+}
+.timeline .image-cradle {
+	text-align:center;
 }
 .timeline iframe,
 .timeline .image-cradle{
