git-svn-id: https://repo.dev.bbc.co.uk/playground/kennyr04/timelines_deck@937452 6500d436-0a25-4ea1-a8e6-63f9231d3e1c

--- a/themes/style/timeline.css
+++ b/themes/style/timeline.css
@@ -73,6 +73,10 @@ font-family: 'Source Sans Pro', sans-serif !important;
 	height:600px;    
 }
 
+.timeline .wider iframe{
+	width:1200px;    
+}
+
 .timeline .narrower iframe{
 	width:800px;    
 }
