--- a/themes/style/timeline.css
+++ b/themes/style/timeline.css
@@ -1,3 +1,9 @@
+.csstransitions .timeline h1.suck:hover{
+	bottom: 400px !important;
+	-webkit-transform: scale(0.1) rotate( 180deg );  
+	-webkit-transition: 2s ease-in;
+}
+
 .timeline h1,
 .timeline h2,
 .timeline p,
