Added link to Zenoss
git-svn-id: https://repo.dev.bbc.co.uk/playground/kennyr04/timelines_deck@938155 6500d436-0a25-4ea1-a8e6-63f9231d3e1c

--- a/themes/style/timeline.css
+++ b/themes/style/timeline.css
@@ -52,7 +52,7 @@
 .timeline #flashtimeline {
 	position:relative;
 	top:100px;
-	width: 50%;
+	width: 630px;
 	margin: 0px auto;
 	border: solid 5px lightblue;
 	text-align: center;
