--- a/themes/style/timeline.css
+++ b/themes/style/timeline.css
@@ -19,6 +19,12 @@
 .timeline .slide pre {
 	padding-left: 30px !important;
 }
+.timeline .slide blockquote{
+	position: relative;
+	top:20px;
+	font-size: 1em !important;
+	width:50%;
+}
 .cssreflections .timeline .slide h1{
 	-webkit-box-reflect: below -0.556em -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(0.3, transparent), color-stop(0.7, rgba(255, 255, 255, 0.1)), to(transparent)) !important;
 }
