git-svn-id: https://repo.dev.bbc.co.uk/playground/kennyr04/timelines_deck@938517 6500d436-0a25-4ea1-a8e6-63f9231d3e1c

--- a/themes/style/timeline.css
+++ b/themes/style/timeline.css
@@ -148,3 +148,7 @@
 .timeline article#monitoring code div.highlightable:hover span {
     color: #ff0000 !important;
 }
+
+.timeline .no-top-offset{
+	top: 5px;
+}
