fixed positioning on monitoring page
git-svn-id: https://repo.dev.bbc.co.uk/playground/kennyr04/timelines_deck@938597 6500d436-0a25-4ea1-a8e6-63f9231d3e1c

--- a/themes/style/timeline.css
+++ b/themes/style/timeline.css
@@ -128,6 +128,8 @@
 	font-size: 12px !important;
 	float: left;
 	padding-left: 10px;
+	top:40px;
+	position:relative;
 }
 
 .timeline article#monitoring section:first-of-type {
@@ -139,6 +141,10 @@
 	width: 600px;
 }
 
+.timeline article#monitoring code div.highlightable{
+  padding:0px;
+  margin:0px;
+}
 .timeline article#monitoring code div.highlightable:hover{  
 	-webkit-transform: scale(1.5);
 	-webkit-transition-duration: 0.5s;
@@ -184,5 +190,5 @@
 
 
 .timeline .no-top-offset{
-	top: 5px;
+	top: 5px !important;
 }
