--- a/themes/style/timeline.css
+++ b/themes/style/timeline.css
@@ -21,6 +21,9 @@
 	top: 50px;
 	padding-left: 30px !important;
 }
+.timeline .slide pre.smaller {
+	font-size: 12px !important;
+}
 .timeline .slide blockquote{
 	position: relative;
 	top:20px;
