fixed code formatting on jasmine example
git-svn-id: https://repo.dev.bbc.co.uk/playground/kennyr04/timelines_deck@938667 6500d436-0a25-4ea1-a8e6-63f9231d3e1c

--- a/themes/style/timeline.css
+++ b/themes/style/timeline.css
@@ -23,6 +23,8 @@
 }
 .timeline .slide pre.smaller {
 	font-size: 12px !important;
+	width:50%;
+	left: 25%;
 }
 .timeline .slide blockquote{
 	position: relative;
@@ -147,7 +149,7 @@
   padding:0px;
   margin:0px;
 }
-.timeline article#monitoring code div.highlightable:hover{  
+.timeline code div.highlightable:hover{  
 	-webkit-transform: scale(1.5);
 	-webkit-transition-duration: 0.5s;
 	background-color: #ffffff;
