restricted width of ULs
git-svn-id: https://repo.dev.bbc.co.uk/playground/kennyr04/timelines_deck@938747 6500d436-0a25-4ea1-a8e6-63f9231d3e1c

--- a/themes/style/timeline.css
+++ b/themes/style/timeline.css
@@ -57,6 +57,9 @@
 	top: 50px;
 	left: 20%;
 	position: relative;
+	width: 60%;
+}
+.timeline .slide blockquote.fullwidth{
 	width: 80%;
 }
 .timeline #flashtimeline {
