--- a/themes/style/timeline.css
+++ b/themes/style/timeline.css
@@ -39,16 +39,16 @@
 	text-align:center;
 	-webkit-box-reflect: none !important;
 }
-.timeline .insterstitial{
+.timeline .interstitial{
 	background-color:lightblue;  
 	font-size:2em  
 }
-.timeline .insterstitial h1{
+.timeline .interstitial h1{
 	position: absolute !important;
 	top: 50% !important;
 	bottom: auto !important; 
 }
-.cssreflections .timeline .insterstitial h1{
+.cssreflections .timeline .interstitial h1{
 	-webkit-box-reflect: none !important;
 	padding:0px;
 }
